tests/compilefail68.out
[1mtests/compilefail68.pas:10:9: [0m[1m[91merror:[0m Identifier expected following 'for' statement, instead saw: '17'
    10 | 	for 17 to 19 do