tests/compilefail68.pas
program compilefail68(output);
{typo in for statement}


var i:integer;


begin
	
	for 17 to 19 do 
		writeln(i);

end.
